--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,28 @@
 [project]
 name = "gpu_benchmark"
-version = "0.2.3"
-description = "GPU benchmarking tool using Stable Diffusion"
+version = "0.3.0"
+description = "GPU benchmarking tool using Stable Diffusion and Wan2.1 video generation"
 readme = "README.md"
 authors = [
     {name = "Max Hager", email = "maxhager28@gmail.com"}
 ]
 dependencies = [
-    "torch",
+    "torch>=2.4.0",
+    "torchvision>=0.19.0",
     "tqdm",
-    "diffusers",
-    "transformers",
-    "accelerate",
+    "diffusers>=0.31.0",
+    "transformers>=4.49.0",
+    "tokenizers>=0.20.3",
+    "accelerate>=1.1.1",
     "pynvml",
-    "supabase"
+    "opencv-python>=4.9.0.80",
+    "imageio",
+    "imageio-ffmpeg",
+    "easydict",
+    "ftfy",
+    "numpy>=1.23.5,<2",
+    "gradio>=5.0.0",
+    "requests"
 ]
 
 [project.scripts]
